2005-04-24  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (_lm_connection_succeeded),
	(_lm_connection_failed_with_error), (connection_connect_cb),
	(connection_do_connect), (connection_do_close):
	- Disconnect from the connect io-watch when connect is done.
	- Based on a patch from Daniel Lavalliere.

2005-04-18  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Check if connection is opening as well and close it if it is.
	- Fix suggested by Daniel Lavalliere.

2005-03-31  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* CONTRIBUTORS: 
	* loudmouth/lm-connection.c:
	* loudmouth/lm-ssl.c:
	- More release work. 
	- Adding CONTRIBUTORS file.

2005-03-31  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* configure.in:
	- Removed the mono directory from the release tarball, never finished
	  and should probably be redone from scratch if to be done now.

2005-03-31  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-debug.h: Correct log domain
	* loudmouth/lm-ssl.c: (ssl_verify_certificate):
	- Removed GNUTLS_CERT_NOT_TRUSTED which has been removed from GnuTLS.
	- Patch from foser@gentoo.org

2005-02-02  Mikael Hallendal  <micke@imendio.com>

	* examples/lm-change-password.c: (print_usage), (main):
	- Support sending --host which would be the host part of the jid if
	  the connect server is different.

2005-01-27  Martyn Russell  <mr@gnome.org>

	* loudmouth/lm-connection.c (_lm_connection_failed_with_error): 
	- Added fix to call the open callback when all connection attempts
	fail to the destination server.

2005-01-19  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_in_event):
	* loudmouth/lm-ssl.c: (_lm_ssl_read):
	- Seems GnuTLS returns a huge size as read bytes when the server is
	  disconnected. Check if returned read size is larger than asked for
	  if so, set the connection to be hung up.
	- Fixes bug #164592
